Project simple_payment {
  database_type: 'PostgreSQL'
  Note: '''
    # Simple Payment Database
  '''
}

Table users as U {
  username varchar [pk]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  password_changed_at timestamptz [not null, default: '0001-01-01 00:00:00Z']
  created_at timestamptz [not null, default: `now()`]
}

Table wallets as W {
  id bigserial [pk]
  owner varchar [ref: > U.username, not null]
  balance bigint [not null]
  currency varchar [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
   owner
   (owner, currency) [unique]
  }
}

Table entries {
  id bigserial [pk]
  wallet_id bigint [not null, ref: > wallets.id]
  amount bigint [not null, note: '+credit / -debit']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    wallet_id
  }
}

Table payments {
  id bigserial [pk]
  from_wallet_id bigint [not null, ref: > W.id]
  to_wallet_id bigint [not null, ref: > W.id]
  amount bigint [not null, note: 'must be > 0']
  status varchar [not null, note: 'pending | completed | failed']
  created_at timestamptz [not null, default: `now()`]

  indexes {
    from_wallet_id
    to_wallet_id
    (from_wallet_id, to_wallet_id)
  }
}

Table sessions {
  id uuid [pk]
  username varchar [ref: > U.username]
  refresh_token varchar [not null]
  user_agent varchar [not null]
  client_ip varchar [not null]
  is_blocked boolean [not null, default: false]
  expires_at timestamptz [not null]
}


